--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@resvg/resvg-js": "2.6.0",
+    "puppeteer": "^21.10.0",
     "satori": "0.10.11",
     "satori-html": "0.3.2"
   }
